plugins {
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    // for jar fs
    api ('com.github.marschall:zipfilesystem-standalone:1.0.1') 
    api files('libs/javac-new.jar')
	api files('libs/javac.jar')
    api files('libs/nb-javac-17.0.0.0-api.jar')
    api files('libs/nb-javac-17.0.0.0.jar')
    api files('libs/jrt-fs.jar')
    api files('libs/jmx-1.2.1.jar') 
    api files('libs/javax-swing.jar')
}


tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
    "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
    "--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
    "--add-modules=jdk.jdeps",
    "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
    "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
    ]
}
